--- a/CascableCore Demo Projects/CascableCore iOS Demo (Obj-C)/Supporting Files/Info.plist
+++ b/CascableCore Demo Projects/CascableCore iOS Demo (Obj-C)/Supporting Files/Info.plist
@@ -31,8 +31,10 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>CascableCore connects to your camera via USB in order to communicate with it.</string>
 	<key>NSLocalNetworkUsageDescription</key>
-	<string>Cascable needs access to the local network in order to communicate with cameras over WiFi.</string>
+	<string>CascableCore needs access to the local network in order to communicate with cameras over WiFi.</string>
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_ptp._tcp</string>
